@@ -7,7 +7,8 @@ SUBDIRS          = src
 pkgconfigdir     = @pkgconfigdir@
 pkgconfig_DATA   = libHX.pc
 
-nobase_include_HEADERS = libHX.h libHX/arbtree.h libHX/clist.h libHX/defs.h \
+nobase_include_HEADERS = libHX.h libHX/arbtree.h libHX/clist.h \
+	libHX/ctype_helper.h libHX/defs.h \
 	libHX/deque.h libHX/list.h libHX/misc.h libHX/option.h libHX/string.h \
 	libHX/libxml_helper.h
 
