@@ -7,6 +7,7 @@
 #include <libHX.h>
 #include <libHX/clist.h>
 #include <libHX/list.h>
+#include <libHX/ctype_helper.h>
 #include <libHX/libxml_helper.h>
 
 int main(void)
