@@ -22,6 +22,10 @@ New feature: Type-checking casts.
   const_cast() is kept to not break program compilation.)
 
 
+New misc code:
+- ctype_helper: initial version
+
+
 libHX 1.28 (November 18 2008)
 =============================
 - add HXTYPE_{U,}INT{8,16,32,64}
